# Docling-Parser

./: .gitignore  json_p.py  main.py  mark.txt  out.txt  output.txt  pyproject.toml  robi-roaming.json  scrapping.py
chat/: chat.py
qdrant/: db_create.py  insert_db.py  vector_store.py
robi_task/: json_p.py  output.txt  roamingB.py  scrapping.py
service/: chat.py  doc.py
storage/: default__vector_store.json  docstore.json  index_store.json
utils/: chat_history.py  dataset_utils.py
view/: chat.html  doc.html
