[project]
name = "docling_test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docling>=2.8.1",
    "fastapi>=0.115.5",
    "llama-index-vector-stores-qdrant>=0.4.0",
    "llama-index>=0.12.2",
    "python-multipart>=0.0.19",
    "uvicorn>=0.32.1",
    "fastembed>=0.4.2",
    "llama-index-embeddings-fastembed>=0.3.0",
    "websocket>=0.2.1",
    "selenium>=4.27.1",
    "feedparser>=6.0.11",
    "spellchecker>=0.4",
]
